--- a/apps/test-python/deploy/deployment.yaml
+++ b/apps/test-python/deploy/deployment.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: Replace
+    type: Recreate
   selector:
     matchLabels:
       app: test-python
